# rss-plugin

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.sh  make.sh  plugin.c  plugin.h  rssplugin.desktop
src/: app.rs  config.rs  feed.rs  gui.rs  icon.rs  lib.rs  state.rs
src/res/: icon.rs  mod.rs
src/ui/: about_dialog.rs  config_dialog.rs  feed_dialog.rs  mod.rs  panel_box.rs  panel_icon.rs
src/xfce/: ffi.rs  mod.rs  object.rs  plugin.rs  rc.rs
