[package]
name = "rssrsr"
version = "0.1.0"
authors = ["Siver K. Volle <8384586+siverv@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "rsrssplugin"
crate-type = ["staticlib", "cdylib"]


[dependencies]
libc = "0.2"
gtk = "0.7"
gtk-sys = "0.9"
gdk-pixbuf = "0.7"
gio = "0.7"
glib = "0.8"
glib-sys = "0.9"
rss = { version = "1.0", features = ["from_url"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"