[package]
name = "rssrsr"
version = "0.2.3"
authors = ["Siver K. Volle <8384586+siverv@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "rsrssplugin"
crate-type = ["staticlib", "cdylib"]


[dependencies]
libc = "0.2"
gtk = "0.7"
gtk-sys = "0.9"
gdk-pixbuf = "0.7"
gio = "0.7"
glib = "0.8"
glib-sys = "0.9"
gobject-sys = "0.9"
gdk-sys = "0.9"
gdk = "0.11"
rss = "1.0"
reqwest = { version = "0.10", features = ["blocking"] }
shrinkwraprs = "0.3.0"
